--- a/README
+++ b/README
@@ -9,11 +9,20 @@ Installation:-
 3)Click on Modules tab and in this click on "Install Modules" and then select the zipped package of BigBlueButton and install it.
 4)Then look into install modules for the name of BigBlueButton. Enable it.
 
-How to use
+How to use:-
+
+For Instructors
+----------------
 1)Make an instructor account
 2)Create a cource.
 3)Enter inside the course. A new page will open and in it click on bigbluebutton tab and inside it you can set course timing and course message.
-4)Click on "Click here" to go to the Bigbluebutton virtual classroom
+4)Click on "Click here" to go to the Bigbluebutton virtual classroom.
 5)Now make an student account. Get enrolled for a course. 
 6)Enter the course and then click on Bigbluebutton tab and inside it you will find the information about the virtual classroom and a link to the classroom.
+
+For Student
+------------
+1)After the administrator has enabled th BigBlueButton module, a tab of BIgBlueButton will be added on the course page.
+2)On clicking the tab, student will be directed to the page with information about the virtual classroom and a link to it.
+3)A student can enter the class room at any point of the day even if no class is going on at that time.
 
